Resolved Bug 1 and Bug 2 as specified in the assignment document